force-app/main/default/objects/Int_PX_Remit__c/fields/Check__c.field-meta.xml
<CustomField>
    <fullName>Check__c</fullName>
    <label>Check</label>
    <length>20</length>
    <type>Text</type>
</CustomField>