force-app/main/default/objects/Int_PX_Remit__c/fields/Committed__c.field-meta.xml
<CustomField>
    <fullName>Committed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Committed?</label>
    <type>Checkbox</type>
</CustomField>