force-app/main/default/objects/Int_PX_Remit__c/fields/Invoice__c.field-meta.xml
<CustomField>
    <fullName>Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice</label>
    <referenceTo>Invoice__c</referenceTo>
    <relationshipLabel>Int PX Remit</relationshipLabel>
    <relationshipName>Int_PX_Remit</relationshipName>
    <type>Lookup</type>
</CustomField>