force-app/main/default/objects/Int_PX_Remit__c/fields/Line_Data__c.field-meta.xml
<CustomField>
    <fullName>Line_Data__c</fullName>
    <label>Line Data</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>