force-app/main/default/objects/Int_PX_Remit__c/fields/Payment_Batch_Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Payment_Batch_Total_Amount__c</fullName>
    <label>Payment Batch Total Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>