force-app/main/default/objects/Int_PX_Remit__c/fields/Remark__c.field-meta.xml
<CustomField>
    <fullName>Remark__c</fullName>
    <description>This field track Status about Creating Payments processing .</description>
    <inlineHelpText>This field track Status about Creating Payments processing .</inlineHelpText>
    <label>Remark</label>
    <length>255</length>
    <type>Text</type>
</CustomField>