force-app/main/default/objects/Int_PX_Remit__c/fields/Trans_Source__c.field-meta.xml
<CustomField>
    <fullName>Trans_Source__c</fullName>
    <label>Trans Source</label>
    <length>10</length>
    <type>Text</type>
</CustomField>