force-app/main/default/objects/Int_PX_Remit__c/fields/Trans_UID__c.field-meta.xml
<CustomField>
    <fullName>Trans_UID__c</fullName>
    <label>Trans UID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>