force-app/main/default/objects/Int_PX_Remit__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Committed__c</columns>
    <columns>Invoice_Number__c</columns>
    <columns>Record_Number__c</columns>
    <columns>Transaction_Type__c</columns>
    <columns>Transaction_Amount__c</columns>
    <columns>Date__c</columns>
    <columns>Invoice_Amount_Paid__c</columns>
    <columns>Account_Num__c</columns>
    <columns>Trans_Source__c</columns>
    <columns>Trans_UID__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Remark__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>